--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,8 @@
  <div class='block'> <a href='/index' class="menu_links"> Главная </a></div>
  <div class='block'><a href='/about' class="menu_links"> О нас </a></div>
  <div class='block'><a href='/posts' class="menu_links"> Посты </a></div>
- <div class='block'> <a href='/registration' class="menu_links"> Регистрация </a></div>
+ <div class='block'> <a href='/comments' class="menu_links"> Комментарии </a></div>
+ <div class='block'> <a href='/registration' class="menu_links" > Регистрация </a></div>
 </nav> 
 <div class="container_about">
 <div class="container_post">
