--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -151,3 +151,9 @@
 }
 
 
+.text_comments {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  background: #A9A9A9;
+  color: white;
+}
