--- a/templates/comments.html
+++ b/templates/comments.html
@@ -6,7 +6,7 @@
 {% load static %}
 
   <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+  
 </head>
 <body>
 <main class="major">
@@ -15,7 +15,7 @@
  <div class='block'><a href='/about' class="menu_links"> О нас </a></div>
  <div class='block'><a href='/posts' class="menu_links"> Посты </a></div>
  <div class='block'> <a href='/comments' class="menu_links"> Комментарии </a></div>
- 
+
 {% if user.is_authenticated %}
  <div class='block'><span class="menu_links" style="margin-left: 80px;">{{user}}</span></div>
  <div class='block'><a href="/logout" class="menu_links">Выйти</a></div>
@@ -24,22 +24,16 @@
 {% endif %}
 
 </nav> 
-<div class="container_about">
-    <div class="container_post">
-        <form action='/saveeditpost/{{post.id}}' method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            
-            <figure style="width: 200px; margin: 100px; padding: 10px;">
-            <input name="title" type="text" style="margin: 10px;" value="{{post.title}}">
-            <img style="width: 20vw; margin: 10px;" src="/static/images/{{post.image}}" alt=""/>
-            <input type='file' style="margin: 10px;" name='file'/>
-            <input name="text" type="text" style="margin: 10px;" value="{{post.text}}"/>
-            <input type='submit' style="margin: 10px;" value='Создать'/>
-            </figure>
-        </form>
-      </div>
-    </div>
 
+<div class="container_about">
+{% for comment in comments %}
+    <div class="container_post">
+    <a href="post/{{comment.id}}" class="text_post"> Автор: {{comment.author}}</a>
+    <p class="text_post">Комментарий: {{comment.text}}</p>
+    <p class="text_post">Из поста с id: {{comment.post_id}}</p>
+    </div>
+{% endfor %}
+</div>
 </main>
 </body>
 </html>
