--- a/templates/post.html
+++ b/templates/post.html
@@ -14,9 +14,10 @@
  <div class='block'> <a href='/index' class="menu_links"> Главная </a></div>
  <div class='block'><a href='/about' class="menu_links"> О нас </a></div>
  <div class='block'><a href='/posts' class="menu_links"> Посты </a></div>
+ <div class='block'> <a href='/comments' class="menu_links"> Комментарии </a></div>
  
 {% if user.is_authenticated %}
- <div class='block'><span class="menu_links">{{user}}</span></div>
+ <div class='block'><span class="menu_links" style="margin-left: 80px;">{{user}}</span></div>
  <div class='block'><a href="/logout" class="menu_links">Выйти</a></div>
 {% else %}
  <div class='block'><a href='/login' class="menu_links"> Вход </a></div>
@@ -29,15 +30,29 @@
         <img style="width: 20vw;" src="/static/images/{{post.image}}" alt=""/>
         <p class="text_post">{{post.text}}</p>
     </div>
-    <div class="button" >
-        <button class="c-button" type="button">
-            <a href="/editpost/{{post.id}}" class="button_links">Редактировать</a>
-        </button>
-    </div>
-    <div class="button">
-        <div class="c-button" type="button">
-            <a href="/deletepost/{{post.id}}" class="button_links">Удалить</a>
+    {% if user.is_authenticated %} 
+        <div class="button" >
+            <button class="c-button" type="button">
+                <a href="/editpost/{{post.id}}" class="button_links">Редактировать</a>
+            </button>
         </div>
+        <div class="button">
+            <div class="c-button" type="button">
+                <a href="/deletepost/{{post.id}}" class="button_links">Удалить</a>
+            </div>
+        </div>
+        <div class="container_about">
+        <h3 class="text_comments">Оставить комментарий</h3>
+        <form action='/newcomment/{{post.id}}' method="POST" enctype="text" style="margin: 20px">
+            {% csrf_token %}
+
+            
+                <input type='text' placeholder='Автор' name='author' style="height: 30px;"/>
+                <input type='text' placeholder='Текст комментария' name='text' style="height: 30px;"/>
+                <input type='submit' value='Создать' style="height: 30px;"/>
+        </form>
+    {% endif %}
+    
  </div>
 </main>
 </body>
